k8/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f grafana-prometheus.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f grafana-prometheus.yaml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/monitor: "true"
        io.kompose.service: grafana
    spec:
      containers:
      - env:
        - name: GF_SECURITY_ADMIN_PASSWORD
          value: grafana
        - name: GF_SECURITY_ADMIN_USER
          value: admin
        image: grafana/grafana
        imagePullPolicy: ""
        name: grafana
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: grafana-claim0
        persistentVolumeClaim:
          claimName: grafana-claim0
status: {}
