k8/monitor-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: monitor
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/monitor: "true"
  podSelector:
    matchLabels:
      io.kompose.network/monitor: "true"
